# godot-game-template

./: README.md
.github/workflows/: build.yml
CoreGame/: CMakeLists.txt
Libraries/: CoreGame.gdnlib
